@@ -2,9 +2,10 @@ group 'com.sparkjava'
 version System.properties.getProperty('version', '0.0.0') + "-SNAPSHOT"
 
 buildscript {
-    ext.jettyVersion = '11.0.9'
-    ext.powermockVersion = '2.0.9'
-    ext.mockitoVersion = '4.4.0'
+    ext.jettyVersion = '12.0.9'
+    ext.mockitoVersion = '5.12.0'
+    ext.slf4jVersion = '2.0.13'
+    ext.junitVersion = '5.10.2'
     repositories {
         mavenCentral()
         maven {
@@ -20,29 +21,53 @@ repositories {
 
 
 dependencies {
-    implementation "org.slf4j:slf4j-api:2.0.0-alpha7"
-    testImplementation "org.slf4j:slf4j-api:2.0.0-alpha7"
+    implementation "org.slf4j:slf4j-api:$slf4jVersion"
+    implementation "org.slf4j:slf4j-simple:$slf4jVersion"
+    testImplementation "org.slf4j:slf4j-api:$slf4jVersion"
+    testImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
 
     implementation "org.eclipse.jetty:jetty-server:$jettyVersion"
-    implementation "org.eclipse.jetty:jetty-webapp:$jettyVersion"
+    implementation "org.eclipse.jetty.ee9:jetty-ee9-webapp:$jettyVersion"
+    implementation "org.eclipse.jetty.ee9.websocket:jetty-ee9-websocket-jetty-server:$jettyVersion"// https://mvnrepository.com/artifact/org.eclipse.jetty.ee9.websocket/jetty-ee9-websocket-jakarta-server
+    implementation "org.eclipse.jetty.ee9.websocket:jetty-ee9-websocket-jakarta-server:$jettyVersion"
+    implementation "jakarta.websocket:jakarta.websocket-api:2.0.0"
 
-    implementation "org.eclipse.jetty.websocket:websocket-jetty-server:$jettyVersion"
+    implementation "org.eclipse.jetty.websocket:jetty-websocket-jetty-api:$jettyVersion"
+    implementation "org.eclipse.jetty.websocket:jetty-websocket-jetty-server:$jettyVersion"
+    // https://mvnrepository.com/artifact/org.eclipse.jetty.ee9.websocket/jetty-ee9-websocket-jetty-api
+    implementation "org.eclipse.jetty.websocket:jetty-websocket-core-server:$jettyVersion"
 
+    //testImplementation "net.bytebuddy:byte-buddy-agent:1.14.5"
+    //testImplementation "net.bytebuddy:byte-buddy:1.14.5"
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
     testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
-    testImplementation "org.powermock:powermock-api-mockito2:$powermockVersion"
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
-    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.10.2"
 
-    testImplementation "org.apache.httpcomponents.client5:httpclient5:5.1.3"
-    testImplementation "org.freemarker:freemarker:2.3.31"
-    testImplementation "com.google.code.gson:gson:2.9.0"
-    testImplementation "org.eclipse.jetty.websocket:websocket-jetty-client:$jettyVersion"
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'org.apache.commons:commons-lang3:3.14.0'
+
+    testImplementation "org.apache.httpcomponents.client5:httpclient5:5.3.1"
+    testImplementation "org.freemarker:freemarker:2.3.32"
+    testImplementation "com.google.code.gson:gson:2.11.0"
+    testImplementation "org.eclipse.jetty.ee9.websocket:jetty-ee9-websocket-jetty-client:$jettyVersion"
+    implementation 'org.jetbrains:annotations:24.1.0'
 
 }
 
 test {
+
+//    useJUnitJupiter()
+
+    forkEvery = 1
+    maxParallelForks = 1
     useJUnitPlatform()
+    failFast = true
+    reports {
+
+    }
+    //jvmArgs['-Djavaagent=byte-buddy-agent.jar']
+    //jvmArgs['--add-modules java.se --add-exports java.base/jdk.internal.ref=EVERYONE --add-opens java.base/java.lang=EVERYONE --add-opens java.base/java.nio=EVERYONE --add-opens java.base/sun.nio.ch=EVERYONE --add-opens java.management/sun.management=EVERYONE --add-opens jdk.management/com.sun.management.internal=EVERYONE --add-opens java.base/java.lang.reflect=test']
+
 }
